Embed swap for VGAs

--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<html>
-
-<head>
+<html><head>
     <title>
         you a busta
     </title>
@@ -13,23 +11,17 @@
 <body>
 
     <div style="position: absolute; background-color: #000000; top: 0; left: 0; height: 10%; width: 80%">
-        <img src="http://brocraft.net/images/banners/banner25.png" style="width:100%; height:100%">
+        <img src="http://brocraft.net/images/banners/banner49.png" style="width:100%; height:100%">
     </div>
 
     <div style="position: absolute; bottom: 0; left: 0; height: 90%; width: 80%">
-        <object type="application/x-shockwave-flash" height="100%" width="100%" id="live_embed_player_flash" data="http://www.twitch.tv/widgets/live_embed_player.swf?channel=brocraftmain" bgcolor="#000000">
-            <param name="allowFullScreen" value="true">
-            <param name="allowScriptAccess" value="always">
-            <param name="allowNetworking" value="all">
-            <param name="movie" value="http://www.twitch.tv/widgets/live_embed_player.swf">
-            <param name="flashvars" value="hostname=www.twitch.tv&amp;channel=brocraftmain&amp;auto_play=true&amp;start_volume=25">
-        </object>
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/x4WXkKQiEw8?autoplay=1" frameborder="0" allowfullscreen="1"></iframe>
     </div>
 
     <div style="position: absolute; top: 0; right: 0; height: 100%; width: 20%">
-        <script id="cid0020000094411789257" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">
+        <iframe frameborder="0" width="100%" height="100%" id="6618710020000094411789257" src="http://st.chatango.com/h5/gz/r1119151706/id.html"></iframe><script src="http://s0.2mdn.net/instream/video/client.js" async="" type="text/javascript"></script><script id="cid0020000094411789257_" data-cfasync="false" async="" src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">
             {
-                "handle": "brocraftmain",
+                "handle": "steakbasementevents",
                 "arch": "js",
                 "styles": {
                     "a": "000000",
@@ -52,6 +44,7 @@
             }
         </script>
     </div>
-</body>
 
-</html>
+
+
+</body></html>
