--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div style="position: absolute; top: 0; right: 0; height: 100%; width: 20%">
-        <iframe frameborder="0" width="100%" height="100%" id="6618710020000094411789257" src="http://st.chatango.com/h5/gz/r1119151706/id.html"></iframe><script src="http://s0.2mdn.net/instream/video/client.js" async="" type="text/javascript"></script><script id="cid0020000094411789257_" data-cfasync="false" async="" src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">
+        <iframe frameborder="0" width="100%" height="100%" id="6618710020000094411789257" src="http://st.chatango.com/h5/gz/r1119151706/id.html"></iframe><script src="http://s0.2mdn.net/instream/video/client.js" async="" type="text/javascript"></script><script id="cid0020000110181468113" data-cfasync="false" async="" src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">
             {
                 "handle": "steakbasementevents",
                 "arch": "js",
