--- a/index.html
+++ b/index.html
@@ -13,17 +13,11 @@
 <body>
 
     <div style="position: absolute; background-color: #000000; top: 0; left: 0; height: 10%; width: 80%">
-        <img src="http://brocraft.net/images/banners/banner25.png" style="width:100%; height:100%">
+        <img src="http://brocraft.net/images/banners/banner49.png" style="width:100%; height:100%">
     </div>
 
     <div style="position: absolute; bottom: 0; left: 0; height: 90%; width: 80%">
-        <object type="application/x-shockwave-flash" height="100%" width="100%" id="live_embed_player_flash" data="http://www.twitch.tv/widgets/live_embed_player.swf?channel=brocraftmain" bgcolor="#000000">
-            <param name="allowFullScreen" value="true">
-            <param name="allowScriptAccess" value="always">
-            <param name="allowNetworking" value="all">
-            <param name="movie" value="http://www.twitch.tv/widgets/live_embed_player.swf">
-            <param name="flashvars" value="hostname=www.twitch.tv&amp;channel=brocraftmain&amp;auto_play=true&amp;start_volume=25">
-        </object>
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/x4WXkKQiEw8?autoplay=1" frameborder="0" allowfullscreen></iframe>
     </div>
 
     <div style="position: absolute; top: 0; right: 0; height: 100%; width: 20%">
