--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </div>
 
     <div style="position: absolute; top: 0; right: 0; height: 100%; width: 20%">
-        <script id="cid0020000094411789257" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">
+        <script id="cid0020000110183260199" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">
             {
-                "handle": "brocraftmain",
+                "handle": "steakbasementevents",
                 "arch": "js",
                 "styles": {
                     "a": "000000",
