--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 <body>
 
     <div style="position: absolute; background-color: #000000; top: 0; left: 0; height: 10%; width: 80%">
-        <img src="http://brocraft.net/images/banners/banner49.png" style="width:100%; height:100%">
+        <object type="application/x-shockwave-flash" height="100%" width="100%" id="live_embed_player_flash" data="http://www.twitch.tv/widgets/live_embed_player.swf?channel=thegameawards" bgcolor="#000000">
+            <param name="allowFullScreen" value="true">
+            <param name="allowScriptAccess" value="always">
+            <param name="allowNetworking" value="all">
+            <param name="movie" value="http://www.twitch.tv/widgets/live_embed_player.swf">
+            <param name="flashvars" value="hostname=www.twitch.tv&amp;channel=thegameawards&amp;auto_play=true&amp;start_volume=25">
+        </object>
     </div>
 
     <div style="position: absolute; bottom: 0; left: 0; height: 90%; width: 80%">
