--- a/index.html
+++ b/index.html
@@ -13,17 +13,11 @@
 <body>
 
     <div style="position: absolute; background-color: #000000; top: 0; left: 0; height: 10%; width: 80%">
-        <object type="application/x-shockwave-flash" height="100%" width="100%" id="live_embed_player_flash" data="http://www.twitch.tv/widgets/live_embed_player.swf?channel=thegameawards" bgcolor="#000000">
-            <param name="allowFullScreen" value="true">
-            <param name="allowScriptAccess" value="always">
-            <param name="allowNetworking" value="all">
-            <param name="movie" value="http://www.twitch.tv/widgets/live_embed_player.swf">
-            <param name="flashvars" value="hostname=www.twitch.tv&amp;channel=thegameawards&amp;auto_play=true&amp;start_volume=25">
-        </object>
+        <img src="http://brocraft.net/images/banners/banner49.png" style="width:100%; height:100%">
     </div>
 
     <div style="position: absolute; bottom: 0; left: 0; height: 90%; width: 80%">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/x4WXkKQiEw8?autoplay=1" frameborder="0" allowfullscreen></iframe>
+        <iframe src="http://player.twitch.tv/?channel=thegameawards" frameborder="0" scrolling="no" height="100%" width="100%"></iframe><a href="http://www.twitch.tv/thegameawards?tt_medium=live_embed&tt_content=text_link" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px;text-decoration:underline;">Watch live video from thegameawards on www.twitch.tv</a>
     </div>
 
     <div style="position: absolute; top: 0; right: 0; height: 100%; width: 20%">
