remove footer link

--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<html>
-
-<head>
+<html><head>
     <title>
         you a busta
     </title>
@@ -17,11 +15,11 @@
     </div>
 
     <div style="position: absolute; bottom: 0; left: 0; height: 90%; width: 80%">
-        <iframe src="http://player.twitch.tv/?channel=thegameawards" frameborder="0" scrolling="no" height="100%" width="100%"></iframe><a href="http://www.twitch.tv/thegameawards?tt_medium=live_embed&tt_content=text_link" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px;text-decoration:underline;">Watch live video from thegameawards on www.twitch.tv</a>
+        <iframe src="http://player.twitch.tv/?channel=thegameawards" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
     </div>
 
     <div style="position: absolute; top: 0; right: 0; height: 100%; width: 20%">
-        <script id="cid0020000110183260199" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">
+        <iframe frameborder="0" width="100%" height="100%" id="8066320020000110183260199" src="http://st.chatango.com/h5/gz/r1119151706/id.html"></iframe><script id="cid0020000110183260199_" data-cfasync="false" async="" src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">
             {
                 "handle": "steakbasementevents",
                 "arch": "js",
@@ -46,6 +44,7 @@
             }
         </script>
     </div>
-</body>
 
-</html>
+
+
+</body></html>
