--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<html><head>
+<html>
+
+<head>
     <title>
         you a busta
     </title>
@@ -19,7 +21,7 @@
     </div>
 
     <div style="position: absolute; top: 0; right: 0; height: 100%; width: 20%">
-        <iframe frameborder="0" width="100%" height="100%" id="8066320020000110183260199" src="http://st.chatango.com/h5/gz/r1119151706/id.html"></iframe><script id="cid0020000110183260199_" data-cfasync="false" async="" src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">
+        <script id="cid0020000110183260199" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">
             {
                 "handle": "steakbasementevents",
                 "arch": "js",
@@ -44,7 +46,6 @@
             }
         </script>
     </div>
+</body>
 
-
-
-</body></html>
+</html>
